workspace(name = "bazel_issues")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
    ],
    sha256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

local_repository(
    name = "bazel_crash_on_error_during_toolchain_registration",
    path = "bug/bazel_crash_on_error_during_toolchain_registration",
)

# commented out because it will crash
#register_toolchains("@bazel_crash_on_error_during_toolchain_registration//:all")

local_repository(
    name = "allow_1_to_0_transition",
    path = "feature_request/allow_1_to_0_transition",
)

local_repository(
    name = "label_list_flag_emulation",
    path = "feature_request/label_list_flag/emulation",
)

local_repository(
    name = "feature_flag_value",
    path = "feature_request/feature_flag_value",
)
