load(":defs.bzl", "apply_transition_and_fail")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "color",
    build_setting_default = "default",
    visibility = ["//visibility:public"],
)

apply_transition_and_fail(
    name = "three",
    colors = ["red", "green", "blue"],
)

apply_transition_and_fail(
    name = "zero",
    colors = [],
)
